--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
     <h1 class="w3-jumbo"><span class="w3-hide-small"></span>Centre of Excellence Digital Forensics Intelligence and Cyber Security</h1>
     <p>Forensics Intelligence and Cyber security </p>
-    <img src="C:\Users\Bitto\Downloads\WhatsApp Image 2022-07-20 at 12.42.06 PM.jpeg"alt="cyber security space" class="w3-image" width="992" height="1108">
+    <img src="WhatsApp Image 2022-07-20 at 12.42.06 PM.jpeg"alt="cyber security space" class="w3-image" width="992" height="1108">
   </header>
 
   <!-- About Section -->
@@ -146,7 +146,7 @@ To conduct training and skill development that can aid to understand the nature 
             Mr. Harisha
             </td>
             <td>Ongoing</td>
-        <!-- <td><img src="C:\Users\Bitto\Downloads\WhatsApp Image 2022-07-20 at 8.27.34 AM.jpeg"></td> -->
+        <!-- <td><img src="WhatsApp Image 2022-07-20 at 8.27.34 AM.jpeg"></td> -->
       </tr>
       <tr>
         <td>CySeck</td>
@@ -180,9 +180,9 @@ To conduct training and skill development that can aid to understand the nature 
       </div>
       <table class="center">
         <tr>
-          <th><img src="C:\Users\Bitto\Downloads\WhatsApp Image 2022-07-20 at 8.27.36 AM (1).jpeg"</th>
-          <th><img src="C:\Users\Bitto\Downloads\WhatsApp Image 2022-07-20 at 8.27.36 AM.jpeg"</th>
-          <th><img src="C:\Users\Bitto\Downloads\WhatsApp Image 2022-07-20 at 8.27.35 AM (1).jpeg"</th>
+          <th><img src="WhatsApp Image 2022-07-20 at 8.27.36 AM (1).jpeg"</th>
+          <th><img src="WhatsApp Image 2022-07-20 at 8.27.36 AM.jpeg"</th>
+          <th><img src="WhatsApp Image 2022-07-20 at 8.27.35 AM (1).jpeg"</th>
           <!-- <th>Company</th>
           <th>Contact</th>
           <th>Country</th> -->
@@ -226,8 +226,8 @@ To conduct training and skill development that can aid to understand the nature 
     <div class="w3-row w3-center w3-padding-16 w3-section w3-light-grey">
         <table class="center">
             <tr>
-              <th><img src="C:\Users\Bitto\Downloads\WhatsApp Image 2022-07-20 at 8.27.35 AM.jpeg"</th>
-              <th><img src="C:\Users\Bitto\Downloads\WhatsApp Image 2022-07-20 at 8.27.34 AM.jpeg"</th>
+              <th><img src="WhatsApp Image 2022-07-20 at 8.27.35 AM.jpeg"</th>
+              <th><img src="WhatsApp Image 2022-07-20 at 8.27.34 AM.jpeg"</th>
               <!-- <th>Country</th>
               <th>Company</th>
               <th>Contact</th>
@@ -245,7 +245,7 @@ To conduct training and skill development that can aid to understand the nature 
               <!-- <td>Germany</td>
               <td>Centro comercial Moctezuma</td>
               <td>Francisco Chang</td>
-              <td><img src="C:\Users\Bitto\Pictures\47497da5a86ff0e7db01f97689aec3d1.jpg"></td>
+              <td><img src="Pictures\47497da5a86ff0e7db01f97689aec3d1.jpg"></td>
             </tr> -->
             <!-- <tr>
               <td>Centro comercial Moctezuma</td>
